argocd/security-tools/zap/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security-zap
  labels:
    app.kubernetes.io/part-of: security-tools
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
